# uu-prog1

./: .gitignore  README.rst  arithmetics.ipynb  pre-exam.md  pyproject.toml
src/uu_prog1/: 20200831-intro.ipynb  Untitled.ipynb  ajs-decorators.py  char_count.py  classes.py  classes2.py  classes3.py  csv_rw.py  csv_utils.py  debug_template.py  dictionary.py  dizzyTurtles.py  epidemic_assignment.ipynb  epidemic_solution.ipynb  epidemics.py  epidemics_1.py  exam.py  flags.py  lesson-02.ipynb  lesson-05.ipynb  lesson7.py  lesson_nine.ipynb  list_utils.py  mov_avg.py  nima.py  numpy_tutorial_basics.ipynb  python_code_ref.py  str_code.py  testing_and_errors.py  word_count.py
src/uu_prog1/data/: country_continent.csv
src/uu_prog1/examples/: erik-johan.txt  python_code.txt  python_code_with_underscore.txt
src/uu_prog1/ma1/: __init__.py  dizzyTurtles.py  flags.py
tests/: test_epidemics.py  test_lesson7.py  test_mov_avg.py  test_smooth.py  test_uu_prog1.py  test_word_count.py
